--- a/references.bib
+++ b/references.bib
@@ -1616,4 +1616,10 @@ doi = {10.1201/9781420072884-c30}
   year       = {2011}
 }
 
+@book{gomez2020bayesian,
+  title={Bayesian inference with INLA},
+  author={G{\'o}mez-Rubio, Virgilio},
+  year={2020},
+  publisher={CRC Press}
+}
 
